initial impelmentation of models